# Longitudinal_Controller_NN

./: README.md
Data/csv/: filtered_real_world_data1.csv  inverse.csv  inverse_dataset.csv  my_csv.csv  raw_data.csv
Data/data_aquisition/: concatenateCSV.m  plot_final_data.m  plot_sim_data.m
Data_aquisition/: Chirp_Signal.m  concatenateCSV.asv  concatenateCSV.m  forward_profiles.csv  plot_final_csv.m
Long_Controller/: Data_Plotter.m
NN_CPP/: CMakeLists.txt  csv_functions.h  neural_network.h  neural_network_test.cc
NN_CPP/test_data/: velocity.csv
NN_CPP_Testing/: README.md  csv_functions.h  neural_network.h  neural_network_test.cc  weights_biases .h  weights_biases.h
NN_Python/: Get_weights_biases_&_chan_arr.ipynb  README.md  compare_py_and_cpp_models.ipynb  conda_env.yaml  longitudianl_controller_MAIN.ipynb  longitudianl_controller_test.ipynb  longitudinal_controller.py  requirements.txt  train_forward_model.py  train_inverse_model.py
NN_Python/test/: act_fcn.csv  activation_function_test.ipynb  compare_py_and_cpp_models.ipynb  simple_model_test.ipynb  special_activation_test.ipynb  test_activ_lin_1D.py
src/functions/: .activation_parameters.py.icloud  .initializers.py.icloud  .layers.py.icloud  initializers.py
src/models/: .activated_direct_model.py.icloud  inverse_model.py  (+3 more)
test/: .activation_function_test.ipynb.icloud  .compare_py_and_cpp_models.ipynb.icloud  .simple_model_test.ipynb.icloud  .special_activation_test.ipynb.icloud  .test_activ_lin_1D.py.icloud  activation_function_test.ipynb  special_activation_test.ipynb  test_activ_lin_1D.py
(+31 files in other folders)
